Quick fix to CSS to make x a save 'buttons' more visible.

--- a/nytimes-react-app/client/src/components/DeleteBtn/DeleteBtn.css
+++ b/nytimes-react-app/client/src/components/DeleteBtn/DeleteBtn.css
@@ -1,4 +1,5 @@
 .delete-btn {
-  float: right;
+/*  float: right;*/
   color: #e74944;
+  display: block;
 }
