--- a/nytimes-react-app/client/src/components/SaveBtn/SaveBtn.css
+++ b/nytimes-react-app/client/src/components/SaveBtn/SaveBtn.css
@@ -1,4 +1,5 @@
 .save-btn {
-  float: right;
+/*  float: right; */
   color: #e74944;
+  display: block;
 }
